vasputil 5.4, XXX

* New module chg for stuff dealing with charge densities.

* Minor changes to fix problems with newer versions of required
  libraries.

------------------------------------------------------------------------------

vasputil 5.3, 2010-01-21

* vasputil_chgplaneplot can now plot black and white contour
  plots, with a configurable number of levels. Also some small
  enhancements to the DOS plotting module and vasputil_chgarith.

* Usage of NumpyTestCase in the testsuite has been removed, allowing
  the testsuite to run successfully with NumPy 1.3.

------------------------------------------------------------------------------

vasputil 5.2, 2009-08-03

* Improved DOSCAR support contributed to ASE, use that in vasputil_dosplot. 
  Note that atoms and orbitals in vasputil_dosplot now use 0-based indexing.

------------------------------------------------------------------------------

vasputil 5.1, 2009-03-15

* Uses improved charge density handling in ASE 3.1.

------------------------------------------------------------------------------

vasputil 5.0, 2008-11-16

* Fortran stuff removed, vasputil is now 100 % pure python. This will
  hopefully make it easier to install.

* vasputil now uses the Campos ASE framework.

* The vasputil.chg python module has been deleted, as the
  functionality has been contributed to ASE.

------------------------------------------------------------------------------

vasputil 4.3, 2008-10-15

* New python utilities, vasputil_atomsdistance, vasputil_atomsmoved, 
  vasputil_direct2cartesian, vasputil_nearestneighbors and vasputil_poscar2xyz.

-----------------------------------------------------------------------------

vasputil 4.2, 2008-08-28

* New python libraries, supercell.py and dos.py, intended to be used when
  writing small scripts.

* New utilities, vasputil_zlayers, vasputil_dosplot, vasputil_interpolate,
  implemented using the new python libraries.
