@@ -2,6 +2,9 @@ vasputil 5.4, XXX
 
 * New module chg for stuff dealing with charge densities.
 
+* Removed dos.showdp and dos.save_and_show as experience showed these
+  were not generally useful.
+
 * Minor changes to fix problems with newer versions of required
   libraries.
 
